# streaminghub

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  angular.json  commands.md  dataset.schema.json  datasets  datasource.schema.json  environment.yml  karma.conf.js  package-lock.json  package.json  publish.sh  requirements.txt  setup.py  streaminghub.code-workspace  types.py
archived/orange3-streaminghub/: README.md  pyproject.toml
conduit/: Makefile  (+8 more)
curator/: .gitignore  LICENSE  app.py  config.json  config.py  environment.yml  pyproject.toml  requirements.txt  tp_dict.json  util.py
curator/src/streaminghub_curator/: __main__.py  app.py  config.py  config_win.json  typing.py  util.py
curator/static/css/: style.css
curator/static/js/: init.js  metadata_editor.jsx
curator/templates/: error.html  export.html  home.html  layout.html  login.html  uploadsuccess.html
datamux/: Dockerfile  Makefile  README.md  api.py  commands.md  datamux.py  environment.yml  pyproject.toml  read_h5.py  remote_api.py  remote_server.py  remote_topics.py  replay_mode.py  requirements.dev.txt  requirements.txt  serve.py  server.py  serving.py  test_api.py  test_api_adhdsin.py  test_api_tdbrain.py  test_datamux_client.ipynb  test_datamux_client.py  test_datamux_server.ipynb  test_datamux_server.py  test_remote_api.ipynb  test_remote_api.py  test_remote_api_adhdsin.py  test_remote_api_tdbrain.py  test_remote_client.py  test_remote_server.py  util.py  visualize_stats.ipynb
datamux/cli/: replay.py  simulate.py
datamux/codec/: __init__.py  avro.py  codec.py  json.py
datamux/dataloaders/: n_back.py
datamux/interfaces/: __init__.py  empatica_e4.py  pupil_core.py  relay_mode.py  replay_mode.py
datamux/metadata/: adhd_sin.collection.json  dl_survey.collection.json  empatica_e4.node.json  n_back.collection.json  pg_weather.collection.json  pupil_core.node.json  sr_research_eyelink_1000.node.json
datamux/mock/: empatica_e4ss.py
datamux/mocks/: __init__.py  empatica_e4ss.py
datamux/proto/: datamux.proto  eye_tracking.proto
datamux/readers/: collection.py  node.py  util.py
datamux/remote/: api.py  server.py  topics.py
datamux/repository/: README.md  adhd_sin.collection.json  n_back.collection.json  weather.node.json
datamux/rpc/: __init__.py  websocket.py
datamux/rpc/client/: __init__.py  websocket.py
datamux/rpc/server/: __init__.py  websocket.py
datamux/serializers/: __init__.py  avro.py  json.py  serializer.py
datamux/src/: relay_mode.py  replay_mode.py  serve.py  test_api_tdbrain.py  test_remote_api.ipynb  test_remote_api_adhdsin.py  test_remote_api_tdbrain.py
datamux/src/cli/: replay.py
datamux/src/connectors/: e4ss_commands.txt  empatica_e4.py  pupil_core.py
datamux/src/datamux/: __main__.py  api.py  proxy_mode.py  relay_mode.py  replay.py  replay_mode.py  serve.py  server.py  simulate.py  simulate_mode.py  util.py
datamux/src/et/: Makefile  gen_n_back.py
datamux/src/streaminghub_datamux/: __init__.py  __main__.py  api.py  transforms.py  typing.py  util.py
datamux/src/tools/: proxy_websocket.py
datamux/stats/: run_direct.csv  run_ipc.csv  run_remote_avro.csv  run_remote_json.csv  run_rpc_avro.csv  run_rpc_json.csv  run_rpc_msgpack.csv
datamux/test/: test_api.py  test_api_adhdsin.py  test_api_battleship_gaze.py  test_api_tdbrain.py  test_benchmark.py  test_configs.py  test_datamux_client.ipynb  test_datamux_server.ipynb  test_empatica_e4.py  test_remote_api.py  test_remote_api_adhdsin.py
datamux/test/datamux/: test_empatica_e4.py
datamux/tests/: benchmark_replay.py  test_api.py  test_remote_api.py  test_replay.py  test_serving.py
datamux/tests/connectors/: test_empatica_e4_outlet.py
datamux/tests/datamux/: benchmark_replay.py  test_datasource_replay.py  test_proxy_websocket.py  test_replay.py  test_server.py
datamux/tests/tools/: test_datasource_replay.py  test_proxy_websocket.py
experimental/datamux-rs/: Cargo.toml  build.rs
experimental/datamux-rs/proto/: datamux.proto
experimental/datamux-rs/src/: client.rs  server.rs
plugins/: README.md  pyproject.toml
plugins/src/streaminghub_proxy_empatica_e4/: proxy.py  test_mock.py
plugins/src/streaminghub_proxy_pupil_core/: node.json  proxy.py  test.py
plugins/streaminghub_codec_avro/: pyproject.toml
plugins/streaminghub_codec_avro/streaminghub_codec_avro/: codec.py
plugins/streaminghub_codec_json/: pyproject.toml
plugins/streaminghub_codec_json/streaminghub_codec_json/: __init__.py
plugins/streaminghub_codec_msgpack/: pyproject.toml
plugins/streaminghub_proxy_empatica_e4/: pyproject.toml
plugins/streaminghub_proxy_empatica_e4/streaminghub_proxy_empatica_e4/: __init__.py  mock.py  node.json  proxy.py
plugins/streaminghub_proxy_lsl/: pyproject.toml
plugins/streaminghub_proxy_lsl/streaminghub_proxy_lsl/: lsl.py  proxy.py  test.py
plugins/streaminghub_proxy_pupil_core/: pyproject.toml
plugins/streaminghub_proxy_pupil_core/streaminghub_proxy_pupil_core/: proxy.py  test.py
plugins/streaminghub_rpc_websocket/: pyproject.toml
plugins/streaminghub_rpc_websocket/streaminghub_rpc_websocket/: client.py  server.py
pydfds/: Makefile  README.md  environment.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  test_parser.py
pydfds/repository/: adhd_sin.collection.json  tobii_pro_x2_60.node.json
pydfds/src/: __init__.py  parser.py  replay.py
pydfds/src/dfds/: __init__.py  loader.py  lsl.py  parser.py  replay.py  typing.py  url.py  util.py
pydfds/src/dfs/: __init__.py  types.py
pydfds/src/dtypes/: __init__.py  author.py  collection.py  device.py  field.py  node.py  pipe.py  stream.py  util.py
pydfds/src/streaminghub_pydfds/: __init__.py  const.py  loader.py  lsl.py  parser.py  readers.py  typing.py
pydfds/tests/: test_parser.py  test_path.py
streaminghub_curator/: .gitignore  MANIFEST.in  README.md  pyproject.toml
streaminghub_datamux/: README.md  lsl_api.cfg  pyproject.toml
streaminghub_plugins/streaminghub_codec_json/: pyproject.toml
streaminghub_pydfds/: Makefile  README.md  pyproject.toml
(+759 files in other folders)
