[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaminghub-plugins"
version = "0.0.1"
authors = [{ name = "Yasith Jayawardana", email = "yasith@cs.odu.edu" }]
description = "Plugins to support new devices, codecs, and runtimes on streaminghub"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["streaminghub"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls.homepage = "https://github.com/nirdslab/streaminghub/tree/master/plugins"
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "pylsl>=1.16.2",
    "websockets>=12.0",
    "pillow>=10.2.0",
    "lxml>=5.0.0",
    "jsonschema>=4.20.0",
    "msgpack>=1.0.7",
    "pyzmq>=25.1.2",
    "matplotlib>=3.8.2",
    "h5py>=3.10.0",
    "xmltodict>=0.13.0",
    "streaminghub-pydfds>=0.1.34",
    "avro>=1.11.3",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyarrow>=14.0.2",
    "tqdm>=4.66.1",
    "rich~=13.7.0",
]
optional-dependencies.dev = [
    "black",
    "build",
    "twine",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest",
]

[project.entry-points."streaminghub_datamux.proxy"]
empatica_e4 = "streaminghub_proxy_empatica_e4:EmpaticaE4Proxy"
lsl = "streaminghub_proxy_lsl:LSLProxy"
pupil_core = "streaminghub_proxy_pupil_core:PupilCoreProxy"

[project.entry-points."streaminghub_datamux.rpc.codec"]
avro = "streaminghub_codec_avro:AvroCodec"
json = "streaminghub_codec_json:JSONCodec"
msgpack = "streaminghub_codec_msgpack:MsgpackCodec"

[project.entry-points."streaminghub_datamux.rpc.client"]
websocket = "streaminghub_rpc_websocket:WebsocketClient"

[project.entry-points."streaminghub_datamux.rpc.server"]
websocket = "streaminghub_rpc_websocket:WebsocketServer"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump plugins version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ['pip install streaminghub-plugins=={version}']
