[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaminghub-pydfds"
version = "0.1.18"
authors = [{ name = "Yasith Jayawardana", email = "yasith@cs.odu.edu" }]
description = "Parser for Data Flow Description Schema (DFDS) metadata"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["dfds", "metadata", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.25.1",
    "pylsl>=1.16.1",
    "jsonschema>=4.18.4",
    "pydantic>=2.1.1",
    "h5py>=3.9.0",
    "parse>=1.19.1"
]

[project.urls]
homepage = "https://github.com/nirdslab/streaminghub/tree/master/pydfds"

[project.optional-dependencies]
dev = ["black", "build", "twine", "bumpver", "isort", "pip-tools", "pytest"]

[tool.bumpver]
current_version = "0.1.18"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump pydfds version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
