[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaminghub-datamux"
version = "0.1.8"
authors = [{ name = "Yasith Jayawardana", email = "yasith@cs.odu.edu" }]
description = "A library to stream data into real-time analytics pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["dfds", "metadata", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls.homepage = "https://github.com/nirdslab/streaminghub/tree/master/datamux"
dependencies = ["streaminghub-pydfds", "multiprocess", "numpy", "pandas", "pyarrow", "rich"]
optional-dependencies.dev = [
    "build",
    "twine",
    "bumpver",
    "pip-tools",
    "pytest",
    "tqdm",
]

[tool.bumpver]
current_version = "0.1.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump datamux version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ['pip install streaminghub-datamux=={version}']
