[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaminghub-pydfds"
version = "0.1.40"
authors = [{ name = "Yasith Jayawardana", email = "yasith@cs.odu.edu" }]
description = "Parser for Data Flow Description Schema (DFDS) metadata"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["dfds", "metadata", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "jsonschema", "pydantic", "h5py", "parse", "pandas"]

[project.urls]
homepage = "https://github.com/nirdslab/streaminghub/tree/master/pydfds"

[project.optional-dependencies]
dev = ["black", "build", "twine", "bumpver", "isort", "pip-tools", "pytest"]

[tool.bumpver]
current_version = "0.1.40"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump pydfds version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ['pip install streaminghub-pydfds=={version}']
