[package]
name = "datamux"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "datamux-server"
path = "src/server.rs"

[[bin]]
name = "datamux-client"
path = "src/client.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"